--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -156,7 +156,7 @@ div.gallery {
       position: fixed;
       top: 0px; bottom: 0px; left: 0px; right: 0px;
       background: $light;
-      z-index: 200;
+      z-index: 1200;
       opacity: 1;
       transition: opacity .250s .1s;
       display: flex;
